# py-proxy-client

./: .gitignore  Makefile  README.md  nginx.conf  setup.cfg  setup.py
examples/: send_via_requests.py  send_via_sock.py
pyproxy/: adapter.py  const.py  encode.py  error.py  header.py  pp_requests.py  sock.py
tests/: test_syntax.py
tests/integration/: __init__.py  test_socket.py
tests/unit/: test_encode.py  test_socket.py
