[metadata]
name = pyproxy
version = 2.0.0
description = Python module for implementing the client side of the HAPROXY proxy protocol

[options]
zip_safe = False
packages = find:
install_requires =
    requests

[options.extras_require]
test =
    flake8
    isort
    pylint
    requests
    six
    gevent
    mock
    sh
    requests

[pylint.'MESSAGES CONTROL']
disable =
    invalid-name,
    too-few-public-methods,
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring

[pylint.'TYPECHECK']
# I believe the astroid module confuses pylint and makes it
# complain on things like 'socket.AF_INET' saying there's
# no such member
ignored-modules =
    socket,
    struct

[flake8]
# flake8 customizations go here
